Сделал первую стилизацию

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>PROEKTOGRAD</title>
 </head>
 <body>
-  
+  <h1>Привет, меня зовут Иван Забурдаев! </h1>
+  <h2>Привет, меня зовут Иван!</h2>
+  <h3>Привет, меня зовут Иван!</h3>
+  <h4>Привет, меня зовут Иван!</h4>
+  <h5>Привет, меня зовут Иван!</h5>
+  <h6>Привет, меня зовут Иван!</h6>
+  <p>Проектоград- лагерь для самых умных детей!</p>
+  <img src="/lesha.jpg " style="width:500px">
+  <a href="/uroki.html">Дневник</a>
 </body>
 </html>
